# routerus

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  STRUCTURE.md  app.py  db.sqlite3  deploy-config.example.sh  deploy-remnanode.sh  deploy.sh  docker-compose.vpn.yml  docker-compose.yml  final.sh  harden-existing.sh  install.sh  manage.py  nginx.conf  pyproject.toml  quick-install.sh  requirements.txt  route_formats.py  routerus.py  setup.sh  urls.py  wsgi.py
app/: WireGuardConfigForm.py  forms.py  models.py  urls.py  utils.py  views.py
backend/: requirements.txt
config/: services_config.yaml  settings.py  shadowsocks.json  urls.py  wireguard.conf  xray.json
config_manager/: urls.py
core/: forms.py  urls.py  views.py  wsgi.py
data/: российские сервисы.txt
docker/: Dockerfile  Dockerfile.config-generator  Dockerfile.wg-easy
docs/: INSTALLATION.md  ROUTER_SETUP.md  SECURITY.md  TROUBLESHOOTING.md  index.md  mkdocs.yml
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  vite.config.ts
scripts/: backup.sh  check_api.py  cleanup.sh  create-inbounds.sh  cron-setup.sh  db-config.sh  deploy.sh  domain-setup.sh  dropbox_uploader.sh  firewall.sh  generate-keys.py  helpers.sh  install-packages.sh  install-vpn.sh  install-web.sh  install-xui.sh  loki_log_fetcher.sh  nginx-config.sh  optimize.sh  router-config-generator.sh  routing-config.sh  setup-cloak.sh  setup-routing.sh  setup_server.sh  show-results.sh  ssl-setup.sh  start.sh  (+4 more)
(+161 files in other folders)
